# movies-info-api

./: .gitignore  Makefile  README.md  docker-compose.yml  openapi-schema.yml  pyproject.toml
configuration/: .env.example  Dockerfile  run.sh
src/api/: models.py  serializers.py  urls.py  views.py
src/api/management/commands/: importdata.py
src/api/migrations/: 0001_initial.py
src/config/: asgi.py  settings.py  urls.py  wsgi.py
